M       vbm_vol_genus0.mexw32
M       vbm_vol_genus0.mexw64
M       vbm_vol_gradient3.mexglx
M       vbm_vol_gradient3.mexmaci64
M       vbm_vol_gradient3.mexw32
M       vbm_vol_gradient3.mexw64
M       vbm_vol_interp3f.mexmaci64
M       vbm_vol_interp3f.mexw32
M       vbm_vol_interp3f.mexw64
M       vbm_vol_laplace3.mexglx
M       vbm_vol_laplace3.mexmaci64
M       vbm_vol_laplace3.mexw32
M       vbm_vol_laplace3.mexw64
M       vbm_vol_laplace3R.mexglx
M       vbm_vol_laplace3R.mexmaci64
M       vbm_vol_laplace3R.mexw32
M       vbm_vol_laplace3R.mexw64
M       vbm_vol_localstat.mexglx
M       vbm_vol_localstat.mexmaci64
M       vbm_vol_localstat.mexw32
M       vbm_vol_localstat.mexw64
M       vbm_vol_median3.mexglx
M       vbm_vol_median3.mexmaci64
M       vbm_vol_median3.mexw32
M       vbm_vol_median3.mexw64
M       vbm_vol_median3c.mexmaci64
M       vbm_vol_median3c.mexw32
M       vbm_vol_median3c.mexw64
M       vbm_vol_pbtp.mexmaci64
M       vbm_vol_pbtp.mexw32
M       vbm_vol_pbtp.mexw64
M       vbm_vol_simgrow.mexglx
M       vbm_vol_simgrow.mexmaci64
M       vbm_vol_simgrow.mexw32
M       vbm_vol_simgrow.mexw64

(1) SANLM-Filter had issues in white matter because of error in NAN.
(2) Recompiled all mex-files.

------------------------------------------------------------------------
r612 | gaser | 2014-09-24 17:17:01

M       CHANGES.txt
D       avgT1_Dartel_IXI550_MNI152.nii
M       cg_vbm_write.m

(1)  Removed 3rd noise correction after LAS.
(2)  Corrected intensity normalization error in 7T data. 
(3)  Removed old average T1 IXI image in VBM main directory. 
     A new average T1 can be found in the "template_1.50mm" directory. 
------------------------------------------------------------------------
r613 | dahnke | 2014-09-24 18:21:36

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_stat_marks.m

(1)  Corrected QA execution error. 


------------------------------------------------------------------------
r614 | dahnke | 2014-09-25 01:09:08