@@ -67,10 +67,10 @@ function vbm_tst_pre
 %     'SPMnc'   1 {'p0'}      {''}        {0.5}       0 
 %     'SPM'     0 {'p0'}      {''}        {0.5}       0 
 %    'SPM8'    0 {'p0'}      {''}        {0.5}       1 
-%    'SPM12'   0 {'p0'}      {''}        {0.5}       1 
+    'SPM12'   0 {'p0'}      {''}        {0.5}       1 
 %     'SPM8nc'  1 {'p0'}      {''}        {0.5}       0 
 %     'SPM12nc' 1 {'p0'}      {''}        {0.5}       1 
-     'FSL'     1 {'p0'}      {''}        {-inf}      1 
+ %    'FSL'     1 {'p0'}      {''}        {-inf}      1 
 %     'VBM12'   0 {'p0'}      {'m'}       {1.5}       1 % internal noise correction
 %    'N3'      0 {''}        {'m'}       {-inf}       0 
 %    't1qa'   1 {'pa'}      {'mc'}      {0.80}       0
@@ -85,6 +85,7 @@ function vbm_tst_pre
 %  'BWP_Collins_T2'
 %  'BWP_Collins_PD'
 %  'BWP_Collins_res_slice'
+  'BWP_Collins_resn'
 %  'BWP_Collins_MS'
 %  'BWP_Collins_fast'
 %     'ADHD'
@@ -102,7 +103,7 @@ function vbm_tst_pre
 %    'BO_inverse'     
 %      'private_full'
 %     'BWP_Collins'
-    'SRS'
+ %   'SRS'
 %      'Apes'
    };
  
